--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.0",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.2.3",
     "vue": "^3.3.8"
   },
   "devDependencies": {
